# ModelCollapse

./: .gitignore  README.md  pyproject.toml  run_full_pipeline.sh
configs/: experiment.yaml
scripts/: evaluate_tail.py  generate_paper_artifacts.py  generate_synthetic_head.py  inspect_artifacts.py  inspect_hf_dataset.py  plot_results.py  prepare_clean_corpus.py  run_experiment.py  train_mixture.py
src/model_collapse/: __init__.py  data_utils.py  eval_utils.py  synth_templates.py
src/model_collapse.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
